= MagLev Change Log

== Unreleased Changes

* Fixes to make haml work better
* Fixes to constant definitions
* Fixes regression in Trac 592
* Fixes Trac 641a and 645
* Fixes compile error on Sparc Solaris

== Changes for 22683  2010-01-04

* Optimize fetch/store to Ruby global variables
* Rewrite Hash, IdentityHash to no longer inherit from Smalltalk
  KeyValueDictionary ; the implementations are closer to pure Ruby.
* Fix parser failure part of Trac 483.
* Fix Trac 641.
* Changes to Thread implementation to go with changes to Smalltalk
  implementation of GsProcess>>terminate .
* Removed old workaround for json and trac 616, which has been fixed.
  If you were doing:     require 'maglev_json'
  You must instead do:   require 'json'

== Changes for 22635  2009-12-10

* Performance improvements for binding, some string operations
* fixes to pass more core/io specs.
* Moved mdb and hat_trick to examples/persistence.
* More Gprof support.  Add ability to suspend and resume sampling.
* Added methods temp_obj_space*  to System

== Changes for 22619  2009-12-03

* Added parsedate.rb
* make _equal? , _is_a? , _not , _kind_of ?  special selectors
  make equal?, is_a? , not, kind_of?  public methods in Object .
* Added lib/ruby/1.8/csv.rb which passes all 37 RubySpecs
* Clean up of many examples
* Fix GStore example.  Make begin_transaction a module function.
* Added -Mcommit and -Mpersistent command line parameters.
  -Mpersistent will start the VM in persistent mode.
  -Mcommit start the VM in persistent mode and perform a
  Maglev.commit_transaction just before the VM exits.
* rlwrap is turned off by default. Enable with -Mrlwrap.
* RDoc basically works.

== End of file ==