@@ -13,3 +13,4 @@ including:
 - Ryan Davis for his implementation of ruby_parser2.0.2, which was the
   starting point for the parser implemented in the MagRp module.
 - Conrad Taylor for updating installation scripts to work in Snow Leopard
+- Wayne Seguin for adding MagLev support to RVM - http://rvm.beginrescueend.com/
